fixed bug for character items so they wrap around the screen

--- a/react-app/src/components/Characters/CharacterPage.css
+++ b/react-app/src/components/Characters/CharacterPage.css
@@ -1,4 +1,33 @@
 .character-page-header {
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    width: 69%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.create-character-button {
+    height: 2rem;
+    font-size: 1.5rem;
+}
+
+.user-character-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: auto;
+    margin-right: auto;
+    width: 44%;
+    align-content: flex-end;        /* will work when items have wrapped */
+    align-items: flex-end; 
+}
+
+.character-item {
+    display: inline-block;
+    background-color: black;
+    color: white;
+    width: 31%;
+    height: 20%;
+    margin-top: 1rem;
+    margin-right: 1rem;
 }
